--- a/electrodomesticos.html
+++ b/electrodomesticos.html
@@ -7,6 +7,14 @@
     <title>Tienda Virtual - Electrodomésticos</title>
 </head>
 <body>
-    <img src="img\conejoPrueba.jpg" alt="ConejoPrueba">
+    <header>
+        <nav>
+            <a href="#" >Inicio</a>
+            <a href="#" >Electrodomésticos</a>
+            <a href="#" >Laptops</a>
+            <a href="#" >Celulares</a>
+            <a href="#" >Impresoras</a>
+        </nav>
+    </header>
 </body>
 </html>
