agregado un poco de estilo

--- a/laptops.html
+++ b/laptops.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apartado Laptops</title>
+    <link rel="stylesheet" href="/css/principal.css">
 </head>
 <body>
     
@@ -15,7 +16,7 @@
     </header>
 
     <div class="nav-back">
-        <nav>
+        <nav class="nav_principal container">
             <a href="#" >Inicio</a>
             <a href="#" >Electrodomésticos</a>
             <a href="#" >Laptops</a>
@@ -30,21 +31,21 @@
 
         <section>
             <h3>Laptops de Oficina</h3>
-            <img class="img_mid" src="img/laptop-01.jpg" alt="Laptops de Oficina">
+            <img class="img_mid" src="img/laptop-01.jpg" alt="Laptops de Oficina" width=250rem>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old.</p>
         </section>
 
         <section>
             <h3>Laptop para Estudiantes</h3>
-            <img class="img_mid" src="img/laptop-02.jpg" alt="Laptop para Estudiantes">
+            <img class="img_mid" src="img/laptop-02.jpg" alt="Laptop para Estudiantes" width=250rem>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old.</p>
         </section>
 
         <section>
             <h3>Laptops Gamers</h3>
-            <img class="img_mid" src="img/laptop-03.jpg" alt="Pedidos">
+            <img class="img_mid" src="img/laptop-03.jpg" alt="Pedidos" width=250rem>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old.</p>
         </section>
@@ -79,7 +80,7 @@
             </fieldset>
         </form>
     </section>
-    
+
     <footer>
         <p>Todos los derechos reservados.</p>
     </footer>
