--- a/electrodomesticos.html
+++ b/electrodomesticos.html
@@ -7,6 +7,7 @@
     <title>Tienda Virtual - Electrodomésticos</title>
 </head>
 <body>
+    <!--Cabecera-->
     <header>
         <nav>
             <a href="#" >Inicio</a>
@@ -16,5 +17,79 @@
             <a href="#" >Impresoras</a>
         </nav>
     </header>
+
+
+    <section class="portada">
+        <img src="img/electrodomesticos.png" alt="Electrodomesticos" />
+    </section>
+    <!--Atajos a las categorisa electrodomesticos-->
+    <section class="atajos">
+        <div class="electrodomesticos">
+    
+        </div>
+    </section>
+
+    <!--Categorías de electrodomésticos-->
+    <section class="container" id="container">
+        <!--Arrocera-->
+        <div class="arrocera">
+            <div class="titulo">OLLAS ARROCERAS</div>
+            <div class="items">
+                <div class="images">
+                    <img src="img/ollaArrocera1.jpg" alt="Olla Arrocera loven">
+                </div>
+            </div>
+            <div class="items">
+                <div class="images">
+                    <img src="img/ollaArrocera2.jpg" alt="Olla Arrocera Oster Multi Olla">
+                </div>
+            </div>
+            <div class="items">
+                <div class="images">
+                    <img src="img/ollaArrocera3.jpg" alt="Olla Arrocera Oster Rápida">
+                </div>
+            </div>
+        </div>
+
+        <!--Licuadoras-->
+        <div class="licuadora">
+            <div class="titulo">LICUADORAS</div>
+            <div class="items">
+                <div class="images">
+                    <img src="img/licuadora1.jpg" alt="Licuadora Reversible">
+                </div>
+            </div>
+            <div class="items">
+                <div class="images">
+                    <img src="img/licuadora2.jpg" alt="Licuadora XPERT">
+                </div>
+            </div>
+            <div class="items">
+                <div class="images">
+                    <img src="img/licuadora3.jpg" alt="Licuadora Vaso Blend">
+                </div>
+            </div>
+        </div>
+
+        <!--Cafeteras-->
+        <div class="cafetera">
+            <div class="titulo">CAFETERAS</div>
+            <div class="items">
+                <div class="images">
+                    <img src="img/cafetera1.jpg" alt="Cafetera Dolce Gusto">
+                </div>
+            </div>
+            <div class="items">
+                <div class="images">
+                    <img src="img/cafetera2.jpg" alt="Cafetera BVSTEM7300">
+                </div>
+            </div>
+            <div class="items">
+                <div class="images">
+                    <img src="img/cafetera3.jpg" alt="Cafetera Delonghi">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
