modificado enlaces index

--- a/laptops.html
+++ b/laptops.html
@@ -17,8 +17,8 @@
 
     <div class="nav-back">
         <nav class="nav_principal container">
-            <a href="#" >Inicio</a>
-            <a href="#" >Electrodomésticos</a>
+            <a href="index.html" >Inicio</a>
+            <a href="electrodomesticos.html" >Electrodomésticos</a>
             <a href="#" >Laptops</a>
             <a href="#" >Celulares</a>
             <a href="#" >Impresoras</a>
