--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <a href="#" >Inicio</a>
-            <a href="#" >Electrodomésticos</a>
-            <a href="#" >Laptops</a>
+            <a href="electrodomesticos.html" >Electrodomésticos</a>
+            <a href="laptops.html" >Laptops</a>
             <a href="#" >Celulares</a>
             <a href="#" >Impresoras</a>
         </nav>
