--- a/electrodomesticos.html
+++ b/electrodomesticos.html
@@ -10,9 +10,9 @@
     <!--Cabecera-->
     <header>
         <nav>
-            <a href="#" >Inicio</a>
-            <a href="#" >Electrodomésticos</a>
-            <a href="#" >Laptops</a>
+            <a href="index.html" >Inicio</a>
+            <a href="electrodomesticos.html" >Electrodomésticos</a>
+            <a href="laptops.html" >Laptops</a>
             <a href="#" >Celulares</a>
             <a href="#" >Impresoras</a>
         </nav>
