--- a/electrodomesticos.html
+++ b/electrodomesticos.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/principal.css">
     <title>Tienda Virtual - Electrodomésticos</title>
 </head>
 <body>
     <!--Cabecera-->
     <header>
-        <nav>
-            <a href="index.html" >Inicio</a>
-            <a href="electrodomesticos.html" >Electrodomésticos</a>
-            <a href="laptops.html" >Laptops</a>
-            <a href="#" >Celulares</a>
-            <a href="#" >Impresoras</a>
-        </nav>
+        <div class="nav-back">
+            <nav class="nav_principal container">
+                <a href="index.html" >Inicio</a>
+                <a href="electrodomesticos.html" >Electrodomésticos</a>
+                <a href="laptops.html" >Laptops</a>
+                <a href="#" >Celulares</a>
+                <a href="#" >Impresoras</a>
+            </nav>
+        </div>
     </header>
+    
 
 
     <section class="portada">
