--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="#" >Inicio</a>
+            <a href="index.html" >Inicio</a>
             <a href="electrodomesticos.html" >Electrodomésticos</a>
             <a href="laptops.html" >Laptops</a>
             <a href="#" >Celulares</a>
