--- a/electrodomesticos.html
+++ b/electrodomesticos.html
@@ -82,7 +82,7 @@
                 <div class="description">
                     <b>Cafetera 1</b><br/>
                     <div class="item-select">
-                        Price: S/.10
+                        Price: S/.338
                     </div>
                     <button class="buynow-btn">Comprar</button>
                 </div>
@@ -94,7 +94,7 @@
                 <div class="description">
                     <b>Cafetera 2</b><br/>
                     <div class="item-select">
-                        Price: S/.1.5
+                        Price: S/.248
                     </div>
                     <button class="buynow-btn">Comprar</button>
                 </div>
@@ -106,7 +106,7 @@
                 <div class="description">
                     <b>Cafetera 3</b><br/>
                     <div class="item-select">
-                        Price: S/.2.5
+                        Price: S/.395
                     </div>
                     <button class="buynow-btn">Comprar</button>
                 </div>
@@ -125,7 +125,7 @@
                 <div class="description">
                     <b>Olla Arrocera 1</b><br/>
                     <div class="item-select">
-                        Price: S/.10
+                        Price: S/.20
                     </div>
                     <button class="buynow-btn">Comprar</button>
                 </div>
@@ -137,7 +137,7 @@
                 <div class="description">
                     <b>Olla Arrocera 2</b><br/>
                     <div class="item-select">
-                        Price: S/.1.5
+                        Price: S/.30
                     </div>
                     <button class="buynow-btn">Comprar</button>
                 </div>
@@ -149,12 +149,19 @@
                 <div class="description">
                     <b>Olla Arrocera 3</b><br/>
                     <div class="item-select">
-                        Price: S/.2.5
+                        Price: S/.55
                     </div>
                     <button class="buynow-btn">Comprar</button>
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="olas">
+        <div class="wave wave1"></div>
+        <div class="wave wave2"></div>
+        <div class="wave wave3"></div>
+        <div class="wave wave4"></div>
     </section>
 </section>
 </body>
