Correción para la validación

--- a/electrodomesticos.html
+++ b/electrodomesticos.html
@@ -22,10 +22,10 @@
     </header>
     
 
-    <section class="main">
-        <section class="portada">
+    <div class="main">
+        <div class="portada">
             <img src="img/electrodomesticos.png" alt="Electrodomesticos" />
-        </section>
+        </div>
 
         <!--Licuadoras-->
         <div class="deals-container" id="licuadoras">
@@ -155,14 +155,13 @@
                 </div>
             </div>
         </div>
-    </section>
 
-    <section class="olas">
-        <div class="wave wave1"></div>
-        <div class="wave wave2"></div>
-        <div class="wave wave3"></div>
-        <div class="wave wave4"></div>
-    </section>
-</section>
+        <div class="olas">
+            <div class="wave wave1"></div>
+            <div class="wave wave2"></div>
+            <div class="wave wave3"></div>
+            <div class="wave wave4"></div>
+        </div>
+    </div>
 </body>
 </html>
