--- a/laptops.html
+++ b/laptops.html
@@ -38,26 +38,26 @@
     
 
 
-    <main clas="container">
+    <main class="container">
         <h2>Nuestros Productos</h2>
 
         <section>
             <h3>Laptops de Oficina</h3>
-            <img class="img_mid" src="img/laptop-01.jpg" alt="Laptops de Oficina" width=250rem>
+            <img class="img_mid" src="img/laptop-01.jpg" alt="Laptops de Oficina" width=250px>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old.</p>
         </section>
 
         <section>
             <h3>Laptop para Estudiantes</h3>
-            <img class="img_mid" src="img/laptop-02.jpg" alt="Laptop para Estudiantes" width=250rem>
+            <img class="img_mid" src="img/laptop-02.jpg" alt="Laptop para Estudiantes" width=250px>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old.</p>
         </section>
 
         <section>
             <h3>Laptops Gamers</h3>
-            <img class="img_mid" src="img/laptop-03.jpg" alt="Pedidos" width=250rem>
+            <img class="img_mid" src="img/laptop-03.jpg" alt="Pedidos" width=250px>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old.</p>
         </section>
