--- a/electrodomesticos.html
+++ b/electrodomesticos.html
@@ -15,8 +15,8 @@
                 <a href="index.html" >Inicio</a>
                 <a href="electrodomesticos.html" >Electrodomésticos</a>
                 <a href="laptops.html" >Laptops</a>
-                <a href="#" >Celulares</a>
-                <a href="#" >Impresoras</a>
+                <a href="celulares.html" >Celulares</a>
+                <a href="impresoras.html" >Impresoras</a>
             </nav>
         </div>
     </header>
