Página celulares y actualización

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="index.html" >Inicio</a>
             <a href="electrodomesticos.html" >Electrodomésticos</a>
             <a href="laptops.html" >Laptops</a>
-            <a href="#" >Celulares</a>
+            <a href="celulares.html" >Celulares</a>
             <a href="#" >Impresoras</a>
         </nav>
     </header>
