--- a/laptops.html
+++ b/laptops.html
@@ -19,8 +19,8 @@
         <nav class="nav_principal container">
             <a href="index.html" >Inicio</a>
             <a href="electrodomesticos.html" >Electrodomésticos</a>
-            <a href="#" >Laptops</a>
-            <a href="#" >Celulares</a>
+            <a href="laptops.html" >Laptops</a>
+            <a href="celulares.html" >Celulares</a>
             <a href="#" >Impresoras</a>
         </nav>
     </div>
