--- a/laptops.html
+++ b/laptops.html
@@ -26,7 +26,7 @@
     </div>
 
 
-    <main clas="container">
+    <main class="container">
         <h2>Nuestros Productos</h2>
 
         <section>
