--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&family=Pattaya&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/principal.css">
     <title>Tienda Virtual</title>
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html" >Inicio</a>
-            <a href="electrodomesticos.html" >Electrodomésticos</a>
-            <a href="laptops.html" >Laptops</a>
-            <a href="celulares.html" >Celulares</a>
-            <a href="#" >Impresoras</a>
-        </nav>
+        <div class="nav-back">
+            <nav class="nav_principal">
+                <a href="index.html" >Inicio</a>
+                <a href="electrodomesticos.html" >Electrodomésticos</a>
+                <a href="laptops.html" >Laptops</a>
+                <a href="celulares.html" >Celulares</a>
+                <a href="#" >Impresoras</a>
+            </nav>
+        </div>
     </header>
 </body>
 </html>
