--- a/index.html
+++ b/index.html
@@ -19,5 +19,111 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <section class="portafolio">
+            <div class="contenedor">
+                <div class="productos-estrella">
+                    <h2>Seccion de productos estrella</h2>
+                </div>
+                <div class="galeria-port">
+                    <div class="imagen-port">
+                        <img src="img/cafetera1.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/Flecha.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                        <img src="img/H_1.webp" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/Flecha.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                        <img src="img/A_1.webp" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/Flecha.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                        <img src="img/ollaArrocera1.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/Flecha.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                        <img src="img/S_1.webp" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/Flecha.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                        <img src="img/laptop-01.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/Flecha.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                        <img src="img/L_1.webp" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/Flecha.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                        <img src="img/licuadora1.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/Flecha.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="clientes contenedor">
+            <h2 class="titulo">Que dicen nuestros clientes</h2>
+            <div class="cards">
+                <div class="card">
+                    <img src="img/Persona1.jpg" alt="">
+                    <div class="contenido-texto-card">
+                        <h4>Juliana Zapata</h4>
+                        <p>Encantada de comprar siempre en esta tienda , los productos me llega a tiempo le doy 5
+                            estrellas</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/Persona2.jpg" alt="">
+                    <div class=" contenido-texto-card">
+                    <h4>Pepe Luna</h4>
+                    <p>Cuando necesito comprar algun producto esta tienda lo tiene , tiene una gran variedad de producto
+                        recomendada</p>
+                </div>
+            </div>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+        <div class="contenedor-footer">
+            <div class="content-foo">
+                <h4>Telefono</h4>
+                <p>987965987</p>
+            </div>
+            <div class="content-foo">
+                <h4>Email</h4>
+                <p>alumno.destacado@uni.pe</p>
+            </div>
+            <div class="content-foo">
+                <h4>Location</h4>
+                <p>Miraflores - Lima</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
