--- a/laptops.html
+++ b/laptops.html
@@ -42,21 +42,21 @@
 
         <section>
             <h3>Laptops de Oficina</h3>
-            <img class="img_mid" src="img/laptop-01.jpg" alt="Laptops de Oficina" width=250px>
+            <img class="img_mid" src="img/laptop-01.jpg" alt="Laptops de Oficina" width=250>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old.</p>
         </section>
 
         <section>
             <h3>Laptop para Estudiantes</h3>
-            <img class="img_mid" src="img/laptop-02.jpg" alt="Laptop para Estudiantes" width=250px>
+            <img class="img_mid" src="img/laptop-02.jpg" alt="Laptop para Estudiantes" width=250>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old.</p>
         </section>
 
         <section>
             <h3>Laptops Gamers</h3>
-            <img class="img_mid" src="img/laptop-03.jpg" alt="Pedidos" width=250px>
+            <img class="img_mid" src="img/laptop-03.jpg" alt="Pedidos" width=250>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old.</p>
         </section>
@@ -70,19 +70,19 @@
                 <legend>Contáctenos para más información</legend>
 
                 <div>
-                    <label for="Nombre">Nombre</label>
+                    <label >Nombre</label>
                     <input type="text" placeholder="Tu nombre">
                 </div>
                 <div>
-                    <label for="Telefono">Teléfono</label>
+                    <label >Teléfono</label>
                     <input type="tel" placeholder="Tu teléfono">
                 </div>
                 <div>
-                    <label for="Correo">Correo</label>
+                    <label >Correo</label>
                     <input type="email" placeholder="Tu correo@algo.com">
                 </div>
                 <div>
-                    <label for="Mensaje">Mensaje</label>
+                    <label >Mensaje</label>
                     <textarea></textarea>
                 </div>
                 <div>
